--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 <option value="esp32s3" selected>ESP32-S3 – Type-D Wireless Display</option>
                 <option value="esp32s3_flipped">ESP32-S3 – Type-D Wireless Display (flipped)</option>
 				<option value="esp32s3_clone">ESP32-S3 Clone - Type-D Wireless Display</option>
-				<option value="esp32s3_flipped_clone">ESP32-S3 Clone - Type-D Wireless Display (flipped></option>
+				<option value="esp32s3_flipped_clone">ESP32-S3 Clone - Type-D Wireless Display (flipped)</option>
               </select>
             </div>
 
@@ -364,8 +364,7 @@
                 Make sure the selected board matches the hardware you have
                 connected.
               </li>
-              <li>Flashes Type_D firmware at address 0x0000.</li>
-              <li>Flashes FFat filesystem image at address 0x410000.</li>
+              <li>Flashes Type_D_Wireless_Display firmware at address 0x0000.</li>
             </ul>
 
             <div class="callout">
