--- a/index.html
+++ b/index.html
@@ -419,10 +419,10 @@
         <span>
           Documentation &amp; source:&nbsp;
           <a
-            href="https://github.com/Darkone83/Type-D"
+            href="https://github.com/Darkone83/Type-D-Wireless-Display"
             target="_blank"
             rel="noreferrer">
-            github.com/Darkone83/Type-D
+            github.com/Darkone83/Type-D-Wireless-Display
           </a>
         </span>
       </footer>
